Git_to_Salesforce/ Q-assign/objects/User_Settings__c.object
<CustomObject>
    <description>It has different user settings like business hours, working hours, logout time etc.</description>
    <fields>
        <fullName>QA_Logout_Time__c</fullName>
        <label>QA Logout Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QA_Logout__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QA Logout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WO_Business_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the Id of Business Hours to use. It is only applicable when Working Hours field has &quot;Business Hours&quot; selected as its value. When applied, the selected business hours are used for this user&apos;s working hours calculations elsewhere in Q-assign.</description>
        <inlineHelpText>Select the Id of Business Hours to use. It is only applicable when Working Hours field has &quot;Business Hours&quot; selected as its value. When applied, the selected business hours are used for this user&apos;s working hours calculations elsewhere in Q-assign.</inlineHelpText>
        <label>Business Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>User_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Working_Hours__c</fullName>
        <description>Stores the type of working hours to be used for this user when calculation is performed based on member&apos;s working hours (such as in Member Point scoring rules).</description>
        <inlineHelpText>Select the type of working hours to be used for this user when calculation is performed based on member&apos;s working hours (such as in Member Point scoring rules).</inlineHelpText>
        <label>Working Hours</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>24/7</fullName>
                </value>
                <value>
                    <fullName>Business Hours</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>QA User Settings</label>
    <nameField>
        <label>User Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QA User Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>